--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br"></html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Felipe Yuji Oda Majer">
-    <meta name="description" content="OMORI é um jogo de terror psicológico feito no RPGmaker. Nele, você deve viajar entre dois mundos, ambos contendo os mesmos segredos. Conheça novos (e velhos) amigos, enfrente novos (e velhos) inimigos, explore suas próprias memórias e desenterre verdades no caminho (embora você deseje que não tenha o feito). Quando a hora chegar, você deve escolher um ou outro.">
+    <meta name="description" content="OMORI é um jogo de terror psicológico feito no RPGmaker. Nele, você deve viajar entre dois mundos, ambos contendo os mesmos segredos. Conheça novos (e velhos) amigos, enfrente novos (e velhos) inimigos, explore suas próprias memórias e desenterre verdades no caminho (embora você deseje que não o tenha feito). Quando a hora chegar, você deve escolher um ou outro.">
     <title>OMORI</title>
     <link rel="stylesheet" type="text/css" href="css/1.css">
     <link rel="icon" type="image/png" href="css/img/omori_icon.png">
     <script src="javas/1.js"></script>
 </head>
-<body>
-    <div class="conteiner-geral">
-        <img id="preto" src="css/img/black.png" alt="preto" onclick="unshow()">
+<body id="body">
+    <div id="cg" class="conteiner-geral">
+        <img id="preto" class="black_" src="css/img/black.png" alt="preto" onclick="unshow()">
         <img id="algo" class="something" src="css/img/algo.png" alt="something"  onclick="unshow()">
         <div class="top">
             <div class="logo">
@@ -21,33 +21,34 @@
                 <img class="logo2" src="css/img/logo_2.png" alt="logo_2">
             </div>
             <div class="bn">
-                <a class="about" href="html/abt.html"><div class="b1">ABOUT</div></a>
+                <a class="about" href="html/abt.html" onclick="sumiu()">ABOUT</a>
                 <a class="gemaplys" href="html/gp.html">GAMEPLAY</a>
                 <a class="story" href="html/str.html">STORY</a>
                 <a class="team" href="html/team.html">TEAM</a>
             </div>
         </div>
-        <div class="bct">
-            <img id="porta" class="door" src="css/img/porta.png" alt="whitespace_door" onclick="unshow2()">
+        <div id="bctk" class="bct">
             <div class="conteiner">
-                <iframe id="trailer" class="console" src="https://www.omori-game.com/video/trailerv2.webm" title="OMORI Console Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen allowtransparency="true"></iframe>
+                <video id="cole" class="console" poster="css/img/porta.png">
+                    <source src="https://www.omori-game.com/video/trailerv2_fallback.mp4" type="video/mp4">
+                </video>
             </div>
             <div class="buyhere">
                 <div class="avhere">
                     <p class="here">AVAILABLE ON:</p>
                 </div>
                 <div class="shops">
-                    <a class="steam" href="https://store.steampowered.com/app/1150690/OMORI/"><img class="steam_logo" src="css/img/steam.png" alt="steam"></a>
-                    <a class="ns" href="html/gp.html"><img class="ns_logo" src="css/img/ns.png" alt="ns"></a>
-                    <a class="ps" href="https://store.playstation.com/en-us/concept/10005141"><img class="ps_logo" src="css/img/ps.png" alt="ps"></a>
-                    <a class="xbox" href="https://www.xbox.com/en-us/games/store/omori/9p8wmq1s4tf9"><img class="xbox_logo" src="css/img/xbox.png" alt="xbox"></a>
+                    <a class="steam" href="https://store.steampowered.com/app/1150690/OMORI/" target="_blank"><img class="steam_logo" src="css/img/steam.png" alt="steam"></a>
+                    <a class="ns" href="https://www.nintendo.com/us/store/products/omori-switch/" target="_blank"><img class="ns_logo" src="css/img/ns.png" alt="ns"></a>
+                    <a class="ps" href="https://store.playstation.com/en-us/concept/10005141" target="_blank"><img class="ps_logo" src="css/img/ps.png" alt="ps"></a>
+                    <a class="xbox" href="https://www.xbox.com/en-us/games/store/omori/9p8wmq1s4tf9" target="_blank"><img class="xbox_logo" src="css/img/xbox.png" alt="xbox"></a>
                 </div>
             </div>
         </div>
         <div class="k7">
             <div class="ws">
                 <div class="ws1">
-                    <a href="index.html"><img class="minhoca" src="css/img/redhand.gif" alt="mao_maluca"></a>
+                    <a><img class="minhoca" src="css/img/redhand.gif" alt="mao_maluca"></a>
                 </div>
                 <div class="ws2">
                     <img class="mewo" src="css/img/mewo.gif" alt="mewo">
@@ -61,13 +62,13 @@
             </div>
             <div class="final">
                 <div class="center">
-                    <div class="crd">OMORI <a class="c" href="https://www.omori-game.com/en" target="_parent">©</a> OMOCAT, LLC.</div>
+                    <div class="crd">OMORI <a class="c" href="https://www.omori-game.com/en" target="_blank">©</a> OMOCAT, LLC.</div>
                 </div>
                 <div class="rs">
-                    <a href="https://web.facebook.com/omorigame?_rdc=1&_rdr"><img class="face" src="css/img/rs_face.png" alt="facebook"></a>
-                    <a href="https://x.com/OMORI_GAME?mx=2"><img class="twt" src="css/img/rs_twitter.png" alt="twitter"></a>
-                    <a href="https://www.instagram.com/omori_game"><img class="insta" src="css/img/rs_insta.png" alt="instagram"></a>
-                    <a href="https://omori.bandcamp.com/"><img class="ost" src="css/img/rs_ost.png" alt="ost_omori"></a>
+                    <a href="https://web.facebook.com/omorigame?_rdc=1&_rdr" target="_blank"><img class="face" src="css/img/rs_face.png" alt="facebook"></a>
+                    <a href="https://x.com/OMORI_GAME?mx=2" target="_blank"><img class="twt" src="css/img/rs_twitter.png" alt="twitter"></a>
+                    <a href="https://www.instagram.com/omori_game" target="_blank"><img class="insta" src="css/img/rs_insta.png" alt="instagram"></a>
+                    <a href="https://omori.bandcamp.com/" target="_blank"><img class="ost" src="css/img/rs_ost.png" alt="ost_omori"></a>
                 </div>
             </div>
         </div>
