--- a/html/abt.html
+++ b/html/abt.html
@@ -32,7 +32,7 @@
             <div class="ct1">
                 <img class="mapa" src="../css/img/headspace_map.png" alt="mapa_headspace">
                 <p class="texto1">Explore um estranho mundo cheio cores, amigos e inimigos. Navegue através do encantador e do mundano para revelar um passado há muito esquecido.<br><br>
-                Quando chegar a hora, o caminho que você escolher irá determinar seu futuro... e talvez o futuro de outros, também.<br><br>
+                Quando chegar a hora, o caminho que você escolher irá determinar seu futuro... e talvez o futuro de outros também.<br><br>
                 OMORI é um vídeo game feito por OMOCAT. Tem estado em produção desde 2014 e foi lançado para Steam (PC/Mac) no dia 25 de dezembro de 2020.<br><br>
                 Atualmente, OMOCAT está trabalhando com "Asia localization" e lançamentos para console.</p>
             </div>
