--- a/html/str.html
+++ b/html/str.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Felipe Yuji Oda Majer">
-    <meta name="description" content="OMORI é um jogo de terror psicológico feito no RPGmaker. Nele, você deve viajar entre dois mundos, ambos contendo os mesmos segredos. Conheça novos (e velhos) amigos, enfrente novos (e velhos) inimigos, explore suas próprias memórias e desenterre verdades no caminho (embora você deseje que não tenha o feito). Quando a hora chegar, você deve escolher um ou outro.">
+    <meta name="description" content="OMORI é um jogo de terror psicológico feito no RPGmaker. Nele, você deve viajar entre dois mundos, ambos contendo os mesmos segredos. Conheça novos (e velhos) amigos, enfrente novos (e velhos) inimigos, explore suas próprias memórias e desenterre verdades no caminho (embora você deseje que não o tenha feito). Quando a hora chegar, você deve escolher um ou outro.">
     <title>OMORI | STORY</title>
     <link rel="stylesheet" type="text/css" href="../css/4.css">
     <link rel="icon" type="image/png" href="../css/img/omori_icon.png">
     <script src="../javas/1.js"></script>
 </head>
 <body>
-    <div class="conteiner-geral">
-        <img id="preto" src="../css/img/black.png" alt="preto" onclick="unshow()">
+    <div id="cg" class="conteiner-geral">
+        <img id="preto" class="black_" src="../css/img/black.png" alt="preto" onclick="unshow()">
         <img id="algo" class="something" src="../css/img/algo.png" alt="something" onclick="unshow()">
         <div class="top">
             <div class="logo">
@@ -21,11 +21,11 @@
                 <img class="logo2" src="../css/img/logo_2.png" alt="logo_2">
             </div>
             <div class="bn">
-                <a class="about" href="abt.html">ABOUT</a><p id="b1"></p>
-                <a class="gemaplys" href="gp.html">GAMEPLAY</a><p id="bs"></p>
+                <a class="about" href="abt.html">ABOUT</a>
+                <a class="gemaplys" href="gp.html">GAMEPLAY</a>
                 <img class="mao" src="../css/img/point_red_right.png" alt="mão">
-                <a class="story" href="str.html">STORY</a><p id="b3"></p>
-                <a class="team" href="team.html">TEAM</a><p id="b4"></p>
+                <a class="story">STORY</a>
+                <a class="team" href="team.html">TEAM</a>
             </div>
         </div>
         <div class="bct">
@@ -69,13 +69,13 @@
             </div>
             <div class="final">
                 <div class="center">
-                    <div class="crd">OMORI <a class="c" href="https://www.omori-game.com/en" target="_parent">©</a> OMOCAT, LLC.</div>
+                    <div class="crd">OMORI <a class="c" href="https://www.omori-game.com/en" target="_blank">©</a> OMOCAT, LLC.</div>
                 </div>
                 <div class="rs">
-                    <a href="https://web.facebook.com/omorigame?_rdc=1&_rdr"><img class="face" src="../css/img/rs_face.png" alt="facebook"></a>
-                    <a href="https://x.com/OMORI_GAME?mx=2"><img class="twt" src="../css/img/rs_twitter.png" alt="twitter"></a>
-                    <a href="https://www.instagram.com/omori_game"><img class="insta" src="../css/img/rs_insta.png" alt="instagram"></a>
-                    <a href="https://omori.bandcamp.com/"><img class="ost" src="../css/img/rs_ost.png" alt="ost_omori"></a>
+                    <a href="https://web.facebook.com/omorigame?_rdc=1&_rdr"target="_blank"><img class="face" src="../css/img/rs_face.png" alt="facebook"></a>
+                    <a href="https://x.com/OMORI_GAME?mx=2"target="_blank"><img class="twt" src="../css/img/rs_twitter.png" alt="twitter"></a>
+                    <a href="https://www.instagram.com/omori_game"target="_blank"><img class="insta" src="../css/img/rs_insta.png" alt="instagram"></a>
+                    <a href="https://omori.bandcamp.com/"target="_blank"><img class="ost" src="../css/img/rs_ost.png" alt="ost_omori"></a>
                 </div>
             </div>
         </div>
