--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="top">
             <div class="logo">
                 <img class="logo1" src="css/img/logo_1.png" alt="logo_1">
-                <img class="lamp" src="css/img/lightbulb.gif" alt="lâmpada" onclick="show()">
+                <img class="lamp" src="https://www.omori-game.com/img/logo/lightbulb.gif" alt="lâmpada" onclick="show()">
                 <img class="logo2" src="css/img/logo_2.png" alt="logo_2">
             </div>
             <div class="bn">
